[package]
name = "relay-scheduler"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Relay Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec",  default-features = false, features = ["derive"] }
scale-info = {  default-features = false, features = ["derive"] }
log = {  default-features = false }
sp-std = {  default-features = false, git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }

sp-runtime = {  default-features = false, git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }
frame-benchmarking = {  default-features = false, git = "https://github.com/paritytech/substrate/", optional = true, branch = "polkadot-v0.9.18" }

cumulus-primitives-core = {  default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.18"  }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate/", default-features = false, branch = "polkadot-v0.9.18"  }
substrate-test-utils = {  git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }
pallet-preimage = {  git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.18" }



[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"cumulus-primitives-core/std",
]
try-runtime = ["frame-support/try-runtime"]
